--- a/python-school/dataframes/1-basics.ipynb
+++ b/python-school/dataframes/1-basics.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "source": [
     "```{admonition} Question\n",
-    "In the second case, adding the `null` entry enables Polars to comply with an important property of dataframes. Which one?\n",
+    "In the second case, adding the `null` entry to the output enables Polars to comply with an important property of dataframes. Which one?\n",
     "```\n",
     "\n",
     "```{admonition} Answer\n",
@@ -265,7 +265,7 @@
    "source": [
     "Here it is!\n",
     "\n",
-    "Note that here, we dealt with a simple, well-formatted file. In the wild (aka, \"the Internet\"), you will not always meet such well-behaved data though. In that case you'll probably need to specify one of the (many) arguments of `read_csv`. Inspect the function to take a quick look! "
+    "Note that here, we dealt with a simple, well-formatted file. In the wild (aka, \"the Internet\"), you will not always meet such well-behaved data. In that case you'll probably need to specify one of the (many) arguments of `read_csv`. Inspect the function to take a quick look! "
    ]
   },
   {
@@ -457,7 +457,7 @@
    "id": "42ee1cec",
    "metadata": {},
    "source": [
-    "Finally, you can take a quick glimpse at it, featuring the two pieces of info we got above, plus the data types and a few values with `.glimpse()`:"
+    "Finally, you can take a quick glimpse at it, featuring the two pieces of info we got above, plus the data types and a few values, with `.glimpse()`:"
    ]
   },
   {
@@ -699,7 +699,7 @@
    "id": "e6244daf",
    "metadata": {},
    "source": [
-    "Turns out we do only have zeros and ones, save some nulls that denote an absence of data."
+    "Calling `pl.col()` therefore enabled us to perform an operation on the selected column! And about the latter, it indeed turns out we only have zeros and ones in there, save some nulls that denote an absence of data."
    ]
   },
   {
@@ -721,7 +721,7 @@
    "id": "212c89ed",
    "metadata": {},
    "source": [
-    "We can therefore safely transform this integer column into a boolean one, using the `.cast()` method, and (optionally) renaming it using `.alias()`:"
+    "We can subsequently safely transform this integer column into a boolean one, using the `.cast()` method, and (optionally) renaming it using `.alias()`:"
    ]
   },
   {
@@ -777,14 +777,7 @@
     "```python\n",
     "protests.select(\"protesterviolence\".cast(bool))\n",
     "```\n",
-    "````\n",
-    "\n",
-    "\n",
-    "```{admonition} Answer\n",
-    ":class: tip dropdown\n",
-    "\n",
-    "Because `\"protesterviolence\"` is a string, and the `cast` method is not defined on strings. And even if it was, this string object does not hold the data inside the column, it is just a string, so no string method could ever transform the data inside the column! That's why this `pl.col()` abstraction exists: its methods allows us to access column data from the DataFrame under consideration.\n",
-    "```"
+    "````"
    ]
   },
   {
@@ -876,7 +869,7 @@
    "source": [
     "We've covered two cases here:\n",
     "- when you'd like to have a column filled with the same value, you will need to specify you're providing the literal value you want in each row with `pl.lit()`,\n",
-    "- when you want to provide directly all the values to put in rows, you will need `pl.Series()`."
+    "- when you want to provide directly all the distinct values to be put in rows, you will need `pl.Series()`."
    ]
   },
   {
@@ -1014,7 +1007,7 @@
    "id": "24e32bd5",
    "metadata": {},
    "source": [
-    "And now we just have to subtract `\"start_date\"` from `\"end_date\"` to get our duration! There is one small problem though. As you can see from the result above, when a protest occurred over one day, the `start_date` and `end_date` are identical. There is a simple solution though: we can add a duration of one day to every entry by adding `pl.duration(days=1)`. That works exactly like adding a scalar to a NumPy array: the value is added to each element. "
+    "And now we just have to subtract `\"start_date\"` from `\"end_date\"` to get our duration! There is one small problem though. As you can see from the result above, when a protest occurred over one day, the `start_date` and `end_date` are identical. There is a simple solution to that: we can add a duration of one day to every entry by adding `pl.duration(days=1)`. That works exactly like adding a scalar to a NumPy array: the value is added to each element. "
    ]
   },
   {
@@ -1804,6 +1797,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ff3ecec9",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>No. overall</th><th>No. in season</th><th>Season</th><th>Title</th><th>Directed by</th><th>Written by</th><th>Novel(s) adapted</th><th>Original air date</th><th>U.S. viewers(millions)</th><th>Imdb rating</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1</td><td>1</td><td>1</td><td>&quot;&quot;Winter Is Coming&quot;&quot;</td><td>&quot;Tim Van Patten&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;17-Apr-11&quot;</td><td>2.22</td><td>9.1</td></tr><tr><td>2</td><td>2</td><td>1</td><td>&quot;&quot;The Kingsroad&quot;&quot;</td><td>&quot;Tim Van Patten&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;24-Apr-11&quot;</td><td>2.2</td><td>8.8</td></tr><tr><td>3</td><td>3</td><td>1</td><td>&quot;&quot;Lord Snow&quot;&quot;</td><td>&quot;Brian Kirk&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;1-May-11&quot;</td><td>2.44</td><td>8.7</td></tr><tr><td>4</td><td>4</td><td>1</td><td>&quot;&quot;Cripples, Bastards, and Broke…</td><td>&quot;Brian Kirk&quot;</td><td>&quot;Bryan Cogman&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;8-May-11&quot;</td><td>2.45</td><td>8.8</td></tr><tr><td>5</td><td>5</td><td>1</td><td>&quot;&quot;The Wolf and the Lion&quot;&quot;</td><td>&quot;Brian Kirk&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;15-May-11&quot;</td><td>2.58</td><td>9.1</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 10)\n",
+       "┌─────────┬────────┬────────┬──────────────┬───┬──────────────┬─────────────┬─────────────┬────────┐\n",
+       "│ No.     ┆ No. in ┆ Season ┆ Title        ┆ … ┆ Novel(s)     ┆ Original    ┆ U.S. viewer ┆ Imdb   │\n",
+       "│ overall ┆ season ┆ ---    ┆ ---          ┆   ┆ adapted      ┆ air date    ┆ s(millions) ┆ rating │\n",
+       "│ ---     ┆ ---    ┆ i64    ┆ str          ┆   ┆ ---          ┆ ---         ┆ ---         ┆ ---    │\n",
+       "│ i64     ┆ i64    ┆        ┆              ┆   ┆ str          ┆ str         ┆ f64         ┆ f64    │\n",
+       "╞═════════╪════════╪════════╪══════════════╪═══╪══════════════╪═════════════╪═════════════╪════════╡\n",
+       "│ 1       ┆ 1      ┆ 1      ┆ \"Winter Is   ┆ … ┆ A Game of    ┆ 17-Apr-11   ┆ 2.22        ┆ 9.1    │\n",
+       "│         ┆        ┆        ┆ Coming\"      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│ 2       ┆ 2      ┆ 1      ┆ \"The         ┆ … ┆ A Game of    ┆ 24-Apr-11   ┆ 2.2         ┆ 8.8    │\n",
+       "│         ┆        ┆        ┆ Kingsroad\"   ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│ 3       ┆ 3      ┆ 1      ┆ \"Lord Snow\"  ┆ … ┆ A Game of    ┆ 1-May-11    ┆ 2.44        ┆ 8.7    │\n",
+       "│         ┆        ┆        ┆              ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│ 4       ┆ 4      ┆ 1      ┆ \"Cripples,   ┆ … ┆ A Game of    ┆ 8-May-11    ┆ 2.45        ┆ 8.8    │\n",
+       "│         ┆        ┆        ┆ Bastards,    ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│         ┆        ┆        ┆ and Broke…   ┆   ┆              ┆             ┆             ┆        │\n",
+       "│ 5       ┆ 5      ┆ 1      ┆ \"The Wolf    ┆ … ┆ A Game of    ┆ 15-May-11   ┆ 2.58        ┆ 9.1    │\n",
+       "│         ┆        ┆        ┆ and the      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│         ┆        ┆        ┆ Lion\"        ┆   ┆              ┆             ┆             ┆        │\n",
+       "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ecc8dc3d",
    "metadata": {},
@@ -1818,17 +1865,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "ec39a0dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "favorite = {\n",
-    "    \"Paolo\" : 'Winter Is',\n",
-    "    \"Chiara\" : 'Wolf and the Lion',\n",
-    "    \"Anselmo\" : 'Fire and',\n",
-    "    \"Letizia\" : 'Garden of'\n",
+    "    \"Paolo\": \"Winter Is\",\n",
+    "    \"Chiara\": \"Wolf and the Lion\",\n",
+    "    \"Anselmo\": \"Fire and\",\n",
+    "    \"Letizia\": \"Garden of\",\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "86d941ff",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (2, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>No. overall</th><th>No. in season</th><th>Season</th><th>Title</th><th>Directed by</th><th>Written by</th><th>Novel(s) adapted</th><th>Original air date</th><th>U.S. viewers(millions)</th><th>Imdb rating</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1</td><td>1</td><td>1</td><td>&quot;&quot;Winter Is Coming&quot;&quot;</td><td>&quot;Tim Van Patten&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;17-Apr-11&quot;</td><td>2.22</td><td>9.1</td></tr><tr><td>5</td><td>5</td><td>1</td><td>&quot;&quot;The Wolf and the Lion&quot;&quot;</td><td>&quot;Brian Kirk&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;15-May-11&quot;</td><td>2.58</td><td>9.1</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (2, 10)\n",
+       "┌─────────┬────────┬────────┬──────────────┬───┬──────────────┬─────────────┬─────────────┬────────┐\n",
+       "│ No.     ┆ No. in ┆ Season ┆ Title        ┆ … ┆ Novel(s)     ┆ Original    ┆ U.S. viewer ┆ Imdb   │\n",
+       "│ overall ┆ season ┆ ---    ┆ ---          ┆   ┆ adapted      ┆ air date    ┆ s(millions) ┆ rating │\n",
+       "│ ---     ┆ ---    ┆ i64    ┆ str          ┆   ┆ ---          ┆ ---         ┆ ---         ┆ ---    │\n",
+       "│ i64     ┆ i64    ┆        ┆              ┆   ┆ str          ┆ str         ┆ f64         ┆ f64    │\n",
+       "╞═════════╪════════╪════════╪══════════════╪═══╪══════════════╪═════════════╪═════════════╪════════╡\n",
+       "│ 1       ┆ 1      ┆ 1      ┆ \"Winter Is   ┆ … ┆ A Game of    ┆ 17-Apr-11   ┆ 2.22        ┆ 9.1    │\n",
+       "│         ┆        ┆        ┆ Coming\"      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│ 5       ┆ 5      ┆ 1      ┆ \"The Wolf    ┆ … ┆ A Game of    ┆ 15-May-11   ┆ 2.58        ┆ 9.1    │\n",
+       "│         ┆        ┆        ┆ and the      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│         ┆        ┆        ┆ Lion\"        ┆   ┆              ┆             ┆             ┆        │\n",
+       "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fav_episodes"
    ]
   },
   {
@@ -1845,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "e8e9a1d7",
    "metadata": {},
    "outputs": [
@@ -1896,22 +1990,28 @@
        "└─────────┴────────┴────────┴───────────────┴───┴──────────┴───────────────┴──────────────┴────────┘"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_aired(game, 17)"
+    "first_aired(game, 2017)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "896fd8bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## A parallel with spreadsheets\n",
+    "\n",
+    "You're probably familiar with some spreadsheets software, such as Excel or Google Sheets.\n",
+    "To make an analogy, you can picture a dataframe as a single sheet, which in Python is stored as a variable.\n",
+    "Then, if you do not reassign this variable, the dataframe stays the same -- so in the analogy, the sheet is untouched.\n",
+    "So while in a spreadsheet, you'd compute for instance the sum of a column in a cell on the same sheet, in Python, you'd assign the result of the sum to a new variable, that is, to a new sheet.\n",
+    "Same goes for filtering or reordering the rows: if you do not explicitly override the original variable, the original data stays intact."
+   ]
   }
  ],
  "metadata": {
