--- a/python-school/dataframes/2-advanced.ipynb
+++ b/python-school/dataframes/2-advanced.ipynb
@@ -107,6 +107,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51088276",
+   "metadata": {},
+   "source": [
+    "### With Matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f3162d6",
    "metadata": {},
    "source": [
@@ -141,6 +149,14 @@
    "metadata": {},
    "source": [
     "Note the use of the `data` argument in which we pass a dataframe, exactly as we did with a dictionary in [here](plt_inputs). Here we filtered protests with more than 10000 participants for visualization purposes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "503133a2",
+   "metadata": {},
+   "source": [
+    "### With hvplot"
    ]
   },
   {
@@ -880,7 +896,7 @@
    "source": [
     "## Aggregate\n",
     "\n",
-    "Here we'll cover the very basics of Dataframe aggregation. Head over to the [documentation](https://docs.pola.rs/user-guide/expressions/aggregation) for more."
+    "Here we'll cover the very basics of Dataframe aggregation. To go further, you can check out the [documentation](https://docs.pola.rs/user-guide/expressions/aggregation)."
    ]
   },
   {
@@ -966,7 +982,7 @@
    "id": "d1e5740e",
    "metadata": {},
    "source": [
-    "```{note}\n",
+    "```{seealso}\n",
     "For an extensive list of operations that give aggregate results, see [the documentation](https://docs.pola.rs/api/python/stable/reference/expressions/aggregation.html).\n",
     "```"
    ]
@@ -1186,6 +1202,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74661414",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4d6901da",
    "metadata": {},
@@ -1327,7 +1357,10 @@
    "id": "849d02f6",
    "metadata": {},
    "source": [
-    "## Joining tables"
+    "## Joining tables\n",
+    "\n",
+    "Suppose we want to add a column to `protests` with the population of each country, to compute the proportion of the population that participated in each protest, for instance.\n",
+    "To do so, we would need to *join* our dataset with another one containing such information."
    ]
   },
   {
@@ -1337,7 +1370,7 @@
    "source": [
     "### Getting another table\n",
     "\n",
-    "Suppose we want to add a column with the population of each country, to compute the proportion of the population that participated in protests, for instance. To do so, we would need to join our dataset with another one containing such information. Let's take for example the dataset [countries_pop.csv](data/countries_pop.csv), from the [World Bank](https://data.worldbank.org/indicator/SP.POP.TOTL):"
+    "To get the population of each country, we can take for example the dataset [countries_pop.csv](data/countries_pop.csv), from the [World Bank](https://data.worldbank.org/indicator/SP.POP.TOTL):"
    ]
   },
   {
@@ -1423,11 +1456,6 @@
    "source": [
     "```{admonition} Question\n",
     "Having seen that, can you guess what the problem was? How is this file different from the ones we've seen previously?\n",
-    "```\n",
-    "\n",
-    "```{admonition} Answer\n",
-    ":class: tip dropdown\n",
-    "The 4 first lines actually contain some metadata about the file, and the header specifying column names is only on the 5th line! That's why Polars complains about the Schema, it thought that the first line was defining the columns, but then found more columns in following lines. Fortunately, Polars lets us skip rows from CSV files, using the `skip_rows` argument.\n",
     "```"
    ]
   },
@@ -1887,7 +1915,15 @@
    "id": "9033a9c9",
    "metadata": {},
    "source": [
-    "A great strength of Polars is its lazy mode. In this mode, instead of working with *Dataframes*, you work with *Lazyframes*. The big difference between the two is that, while the Dataframes actually hold *data*, Lazyframes just hold *a set of operations* to execute.\n",
+    "A great strength of Polars is its lazy mode. In this mode, instead of working with *Dataframes*, you work with *Lazyframes*. The big difference between the two is that, while the Dataframes actually hold *data*, Lazyframes just hold *a set of operations* to execute."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47caa596",
+   "metadata": {},
+   "source": [
+    "### Working with a Lazyframe\n",
     "\n",
     "The first way to obtain a Lazyframe is to call the `.lazy()` method on an existing Dataframe, like so:"
    ]
@@ -2042,11 +2078,6 @@
    "source": [
     "```{admonition} Question\n",
     "Why is this not very smart? How could we make this operation more efficient?\n",
-    "```\n",
-    "\n",
-    "```{admonition} Answer\n",
-    ":class: tip dropdown\n",
-    "Because we're computing this median for every single country, while we're only interested in Italy here! The `filter()` should be called directly after reading the CSV.\n",
     "```"
    ]
   },
@@ -2196,8 +2227,8 @@
     "This is to be read from the bottom up. As you can see, the filter has been *pushed down* to the very moment data is read! Which does make a lot of sense, doesn't it?\n",
     "\n",
     "To sum up, there are two main advantages of using Lazyframes:\n",
-    "- You get an automatic query optimization. So even if the code you wrote could be much more optimal, it will run as fast as it can. In other words, being lazy enables you to be dumb, and not suffer the consequences.\n",
-    "- As filters can be pushed down to the very moment data is read, you don't need to load all data in memory! This means that you could still analyse data files which are too big to fit in your computer memory!"
+    "- You get an automatic query optimization. So even if the code you wrote could be much more optimal, it will run as fast as it can. In other words, being lazy allows you to be dumb and not suffer the consequences.\n",
+    "- As filters can be pushed down to the very moment data is read, you don't need to load all data in memory. This means that you could analyse data files which are too big to fit in your computer memory!"
    ]
   },
   {
@@ -2209,32 +2240,14 @@
     "\n",
     "✪✪ Let's examine the dataset [SANSTRUT001.csv](data/SANSTRUT001.csv) which contains the healthcare facilities of Trentino region, and for each tells the type of assistance it offers (clinical activity, diagnostics, etc), the code and name of the communality where it is located.\n",
     "\n",
+    "- Data source: [dati.trentino.it](https://dati.trentino.it/dataset/strutture-sanitarie-dell-azienda-sanitaria-e-convenzionate)\n",
+    "- License: [Creative Commons Attribution 4.0](https://creativecommons.org/licenses/by/4.0)\n",
     "\n",
-    "Data source: [dati.trentino.it](https://dati.trentino.it/dataset/strutture-sanitarie-dell-azienda-sanitaria-e-convenzionate) Licenza: [Creative Commons Attribution 4.0](http://creativecommons.org/licenses/by/4.0/deed.it)\n",
-    "\n",
-    "Write a function which takes as input a town code and a text string, opens the file **lazily** and:\n",
+    "Write a function `strutsan` which takes as input a town code and a text string, opens the file **lazily** and:\n",
     "\n",
     "1. PRINTS also the number of found rows\n",
     "2. RETURNS a dataframe with selected only the rows having that town code and which contain the string in the column `ASSISTENZA`. The returned dataset must have only the columns \n",
     "`STRUTTURA`, `ASSISTENZA`, `COD_COMUNE`, `COMUNE`. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "a48b01af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def strutsan(cod_comune, assistenza):\n",
-    "    struprotests = pl.scan_csv(\"data/SANSTRUT001.csv\")\n",
-    "    res = struprotests.filter(\n",
-    "        (pl.col(\"COD_COMUNE\") == cod_comune)\n",
-    "        & pl.col(\"ASSISTENZA\").str.contains(assistenza)\n",
-    "    ).collect()\n",
-    "\n",
-    "    print(\"Found\", res.shape[0], \"facilities\")\n",
-    "    return res.select(\"STRUTTURA\", \"ASSISTENZA\", \"COD_COMUNE\", \"COMUNE\")"
    ]
   },
   {
