--- a/python-school/functions/fun2-errors-and-testing.ipynb
+++ b/python-school/functions/fun2-errors-and-testing.ipynb
@@ -26,11 +26,9 @@
     "id": "2uM_3S83D9p9"
    },
    "source": [
-    "\n",
     "## Unforeseen situations\n",
     "\n",
-    "It is evening, there is to party for a birthday and they asked you to make a pie. You need the following steps:\n",
-    "\n",
+    "There is a party for a birthday and these lazy friends of yours asked you to make a pie. You need the following steps:\n",
     "\n",
     "1. take milk\n",
     "2. take sugar\n",
@@ -38,7 +36,7 @@
     "4. mix\n",
     "5. heat in the oven\n",
     "\n",
-    "You take the milk, the sugar, but then you discover there is no flour. It is evening, and there aren't open shops.\n",
+    "You take the milk, the sugar, but then you discover there is no flour. It's late, and there isn't any open supermarket.\n",
     "Obviously, it makes no sense to proceed to point 4 with the mixture, and you have to give up on the pie, telling the guest of honor the problem. You can only hope she/he decides for some alternative."
    ]
   },
@@ -92,11 +90,11 @@
    ],
    "source": [
     "def make_problematic_pie(milk, sugar, flour):\n",
-    "    \"\"\" Suppose you need 1.3 kg for the milk, 0.2kg for the sugar and 1.0kg for the flour\n",
-    "        \n",
-    "        - takes as parameters the quantities we have in the sideboard\n",
+    "    \"\"\"Suppose you need 1.3 kg for the milk, 0.2kg for the sugar and 1.0kg for the flour\n",
+    "\n",
+    "    - takes as parameters the quantities we have in the sideboard\n",
     "    \"\"\"\n",
-    "  \n",
+    "\n",
     "    if milk > 1.3:\n",
     "        print(\"take milk\")\n",
     "    else:\n",
@@ -117,7 +115,7 @@
     "    print(\"I made the pie!\")\n",
     "\n",
     "\n",
-    "make_problematic_pie(5,1,0.3)  # not enough flour ...\n",
+    "make_problematic_pie(5, 1, 0.3)  # not enough flour ...\n",
     "\n",
     "print(\"Party\")"
    ]
@@ -127,7 +125,7 @@
    "metadata": {},
    "source": [
     "```{admonition} Question\n",
-    "This above version has a serious problem. Can you spot it ??\n",
+    "This above version has a serious problem. Can you spot it?\n",
     "```"
    ]
   },
@@ -141,15 +139,13 @@
     "## Check with the return\n",
     "\n",
     "**EXERCISE**: We could correct the problems of the above pie by adding `return` commands. \n",
-    "Improve `make_pie` above by returning True if the pie is doable, and False otherwise, so that outside of the function, you may use the value returned to party or not\n",
+    "Improve `make_pie` above by returning True if the pie is doable, and False otherwise, so that outside of the function, you may use the value returned to announce the party or not.\n",
     "\n",
     "```{warning}\n",
     "Do not move the `print(\"Party\")` inside the function.\n",
     "\n",
-    "The exercise goal is keeping it outside, so to use the value returned by `make_pie` for deciding whether to party or not.\n",
-    "```\n",
-    "\n",
-    "If you have any doubts on functions with return values, check [Chapter 6 of Think Python](http://greenteapress.com/thinkpython2/html/thinkpython2007.html)"
+    "The goal of the exercise is to keep it outside, so to use the value returned by `make_pie` in order to decide whether to announce the party or not.\n",
+    "```"
    ]
   },
   {
@@ -171,7 +167,7 @@
    "source": [
     "made_pie = make_pie(5,1,0.3)\n",
     "\n",
-    "if made_pie == True:\n",
+    "if made_pie:\n",
     "    print(\"Party\")\n",
     "else:\n",
     "    print(\"No party !\")"
@@ -186,12 +182,9 @@
    "source": [
     "## Exceptions\n",
     "\n",
-    "[Real Python - Python Exceptions: an Introduction](https://realpython.com/python-exceptions/)\n",
+    "Using `return` we improved the previous function, but there remains a problem: the responsibility to understand whether or not the pie is properly made is given to the caller of the function, who has to take the returned value and decide upon that whether to announce the party or not. A careless programmer might forget to do the check and announce it even with an ill-formed pie.\n",
     "\n",
-    "\n",
-    "Using `return` we improved the previous function, but remains a problem: the responsibility to understand whether or not the pie is properly made is given to the caller of the function, who has to take the returned value and decide upon that whether to party or not. A careless programmer might forget to do the check and party even with an ill-formed pie.\n",
-    "\n",
-    "So we ask ourselves: is it possible to stop the execution not just of the function, but of the whole program when we find an unforeseen situation?"
+    "So would it be possible to stop the execution not just of the function, but of the whole program when we find an unforeseen situation?"
    ]
   },
   {
@@ -201,19 +194,17 @@
     "id": "PqIyLDxULTRE"
    },
    "source": [
-    "To improve on our previous attempt, we can use the _exceptions_. To tell Python to **interrupt** the program execution in a given point, we can insert the instruction `raise` like this:\n",
+    "To improve on our previous attempt, we can use _exceptions_. To tell Python to **interrupt** the program execution in a given point, we can insert the instruction `raise` like this:\n",
     "\n",
     "```python\n",
     "raise Exception()\n",
     "```\n",
     "\n",
-    "If we want, we can also write a message to help programmers (who could be ourselves ...) to understand the problem origin. In our case it could be a message like this:\n",
+    "If we want, we can also write a message to help programmers (who could be ourselves ...) to understand the origin of the problem. In our case it could be a message like this:\n",
     "\n",
     "```python\n",
     "raise Exception(\"Don't have enough flour !\")\n",
     "```\n",
-    "\n",
-    "Note: in professional programs, the exception messages are intended for programmers, verbose, and typically end up hidden in system logs. To final users you should only show short messages which are understanble by a non-technical public. At most, you can add an error code which the user might give to the technician for diagnosing the problem.\n",
     "\n",
     "**EXERCISE**: Try to rewrite the function above by substituting the rows containing `return` with `raise Exception()`:"
    ]
@@ -242,14 +233,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmake_exceptional_pie\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mParty\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmake_exceptional_pie\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mParty\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "Cell \u001b[0;32mIn[4], line 20\u001b[0m, in \u001b[0;36mmake_exceptional_pie\u001b[0;34m(milk, sugar, flour)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtake flour\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDon\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt have enough flour!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMix\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHeat\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mException\u001b[0m: Don't have enough flour!"
      ]
     }
    ],
    "source": [
-    "make_exceptional_pie(5,1,0.3)\n",
+    "make_exceptional_pie(5, 1, 0.3)\n",
     "print(\"Party\")"
    ]
   },
@@ -291,7 +282,7 @@
     }
    ],
    "source": [
-    "make_exceptional_pie(5,1,20)\n",
+    "make_exceptional_pie(5, 1, 20)\n",
     "print(\"Party\")"
    ]
   },
@@ -320,11 +311,11 @@
     }
    ],
    "source": [
-    "try: \n",
-    "    make_exceptional_pie(5,1,0.3)\n",
+    "try:\n",
+    "    make_exceptional_pie(5, 1, 0.3)\n",
     "    print(\"Party\")\n",
-    "except:  \n",
-    "    print(\"Can't make the pie, what about going out for an ice cream?\")   "
+    "except:\n",
+    "    print(\"Can't make the pie, what about going out for an ice cream?\")"
    ]
   },
   {
@@ -368,11 +359,11 @@
    ],
    "source": [
     "def make_exceptional_pie_2(milk, sugar, flour):\n",
-    "    \"\"\" - suppose we need 1.3 kg for milk, 0.2kg for sugar and 1.0kg for flour\n",
-    "    \n",
-    "        - takes as parameters the quantities we have in the sideboard\n",
-    "            \n",
-    "        - if there are missing ingredients, raises Exception\n",
+    "    \"\"\"- suppose we need 1.3 kg for milk, 0.2kg for sugar and 1.0kg for flour\n",
+    "\n",
+    "    - takes as parameters the quantities we have in the sideboard\n",
+    "\n",
+    "    - if there are missing ingredients, raises Exception\n",
     "    \"\"\"\n",
     "\n",
     "    if milk > 1.3:\n",
@@ -390,20 +381,23 @@
     "    print(\"Mix\")\n",
     "    print(\"Heat\")\n",
     "    print(\"I made the pie !\")\n",
-    "    \n",
-    "try: \n",
-    "    make_exceptional_pie_2(5,1,0.3)\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    make_exceptional_pie_2(5, 1, 0.3)\n",
     "    print(\"Party\")\n",
-    "except ValueError:     \n",
+    "except ValueError:\n",
     "    print()\n",
-    "    print(\"There must be a problem with the ingredients!\")   \n",
+    "    print(\"There must be a problem with the ingredients!\")\n",
     "    print(\"Let's try asking neighbors !\")\n",
     "    print(\"We're lucky, they gave us some flour, let's try again!\")\n",
     "    print(\"\")\n",
-    "    make_exceptional_pie_2(5,1,4) \n",
+    "    make_exceptional_pie_2(5, 1, 4)\n",
     "    print(\"Party\")\n",
     "except:  # manages all exceptions\n",
-    "    print(\"Guys, something bad happened, don't know what to do. Better to go out and take an ice-cream !\")\n"
+    "    print(\n",
+    "        \"Guys, something bad happened, don't know what to do. Better to go out and take an ice-cream !\"\n",
+    "    )"
    ]
   },
   {
@@ -457,7 +451,7 @@
    "source": [
     "# we need water to cool our reactor\n",
     "\n",
-    "water_level = 40 #  seems ok\n",
+    "water_level = 40  #  seems ok\n",
     "\n",
     "print(\"water level: \", water_level)\n",
     "\n",
@@ -595,7 +589,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 20\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWARNING: water level low! \u001b[39m\u001b[38;5;124m\"\u001b[39m, water_level)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# a lot of code\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# after a lot of code we might not know if there are the proper conditions so that\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# everything works allright so before doing critical things, it is always a good idea\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# to perform a check ! if asserts fail (that is, the boolean expression is False),\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# the execution suddenly stops\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m water_level \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mturn on nuclear reactor\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[12], line 20\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWARNING: water level low! \u001b[39m\u001b[38;5;124m\"\u001b[39m, water_level)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# a lot of code\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# after a lot of code we might not know if there are the proper conditions so that\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# everything works alright so before doing critical things, it is always a good idea\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# to perform a check ! if asserts fail (that is, the boolean expression is False),\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# the execution suddenly stops\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m water_level \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mturn on nuclear reactor\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -634,11 +628,11 @@
    "source": [
     "### When to use assert?\n",
     "\n",
-    "The case above is willingly exaggerated, but shows how a check more sometimes prevents disasters.\n",
+    "The case above is willingly exaggerated, but shows how an additional check sometimes prevents disasters.\n",
     "\n",
     "Asserts are a quick way to do checks, so much so that Python even allows to ignore them during execution to improve the performance (calling `python` with the `-O` parameter like in `python -O my_file.py`).\n",
     "\n",
-    "But if performance are not a problem (like in the reactor above), it's more convenient to rewrite the program using an `if` and explicitly raising an `Exception`:\n"
+    "But if performance is not a problem (like in the reactor above), it's more convenient to rewrite the program using an `if` and explicitly raising an `Exception`:"
    ]
   },
   {
@@ -668,7 +662,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 20\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# a lot of code\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# after a lot of code we might not know if there are the proper conditions so \u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# that everything works all right. So before doing critical things, it is always \u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# a good idea to perform a check !\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m water_level \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m20\u001b[39m:\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWater level too low !\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# execution stops here\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mturn on nuclear reactor\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[13], line 20\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# a lot of code\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# after a lot of code we might not know if there are the proper conditions so\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# that everything works alright. So before doing critical things, it is always\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# a good idea to perform a check !\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m water_level \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m20\u001b[39m:\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWater level too low !\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# execution stops here\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mturn on nuclear reactor\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mException\u001b[0m: Water level too low !"
      ]
     }
@@ -676,7 +670,7 @@
    "source": [
     "# we need water to cool our reactor\n",
     "\n",
-    "water_level = 40   # seems ok\n",
+    "water_level = 40  # seems ok\n",
     "\n",
     "print(\"water level: \", water_level)\n",
     "\n",
@@ -688,8 +682,8 @@
     "\n",
     "# a lot of code\n",
     "\n",
-    "# after a lot of code we might not know if there are the proper conditions so \n",
-    "# that everything works all right. So before doing critical things, it is always \n",
+    "# after a lot of code we might not know if there are the proper conditions so\n",
+    "# that everything works alright. So before doing critical things, it is always\n",
     "# a good idea to perform a check !\n",
     "\n",
     "if water_level < 20:\n",
@@ -768,7 +762,7 @@
     "id": "ISlL7iHLgjwb"
    },
    "source": [
-    "We expect that `my_sum(2,3)` gives `5`. We can write in Python this expectation by using an `assert`:"
+    "We expect that `my_sum(2, 3)` gives `5`. We can write in Python this expectation by using an `assert`:"
    ]
   },
   {
@@ -877,14 +871,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert arrival_time(0,0) == '6:52'\n",
-    "assert arrival_time(2,2) == '7:22'\n",
-    "assert arrival_time(2,5) == '7:44'\n",
-    "assert arrival_time(8,5) == '8:34'\n",
-    "assert arrival_time(40,5) == '12:58'\n",
-    "assert arrival_time(100,25) == '23:37'\n",
-    "assert arrival_time(100,40) == '1:25'   \n",
-    "assert arrival_time(700,305) == '19:43' # Forrest Gump"
+    "assert arrival_time(0, 0) == \"6:52\"\n",
+    "assert arrival_time(2, 2) == \"7:22\"\n",
+    "assert arrival_time(2, 5) == \"7:44\"\n",
+    "assert arrival_time(8, 5) == \"8:34\"\n",
+    "assert arrival_time(40, 5) == \"12:58\"\n",
+    "assert arrival_time(100, 25) == \"23:37\"\n",
+    "assert arrival_time(100, 40) == \"1:25\"\n",
+    "assert arrival_time(700, 305) == \"19:43\"  # Forrest Gump"
    ]
   },
   {
