--- a/python-school/numpy/1-basics.ipynb
+++ b/python-school/numpy/1-basics.ipynb
@@ -330,7 +330,8 @@
    "source": [
     "One major difference is that slice indexing of a list copies the\n",
     "elements into a new list, but slicing an array returns a *view*: an\n",
-    "object that refers to the data in the original array."
+    "object that refers to the data in the original array. The original array\n",
+    "can be mutated using the view."
    ]
   },
   {
@@ -419,9 +420,11 @@
    "metadata": {},
    "source": [
     "In NumPy, a dimension of an array is sometimes referred to as an \"axis\".\n",
-    "So an array like `a` above has two axes:\n",
-    "- its **rows**, corresponding to the axis labelled as **`0`**, \n",
-    "- its **columns**, corresponding to the axis labelled as **`1`**.\n",
+    "This terminology may be useful to disambiguate between the\n",
+    "dimensionality of an array and the dimensionality of the data\n",
+    "represented by the array. For instance, the array `a` could represent\n",
+    "three points, each lying within a four-dimensional space, but `a` has\n",
+    "only two \"axes\".\n",
     "\n",
     "Another difference between an array and a list of lists is that an\n",
     "element of the array can be accessed by specifying the index along each\n",
@@ -448,6 +451,25 @@
    ],
    "source": [
     "a[1, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fba84a26",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "You might hear of a 0-D (zero-dimensional) array referred to as a\n",
+    "\"scalar\", a 1-D (one-dimensional) array as a \"vector\", a 2-D\n",
+    "(two-dimensional) array as a \"matrix\", or an N-D (N-dimensional, where\n",
+    "\"N\" is typically an integer greater than 2) array as a \"tensor\". For\n",
+    "clarity, it is best to avoid the mathematical terms when referring to an\n",
+    "array because the mathematical objects with these names behave\n",
+    "differently than arrays (e.g. \"matrix\" multiplication is fundamentally\n",
+    "different from \"array\" multiplication), and there are other objects in\n",
+    "the scientific Python ecosystem that have these names (e.g. the\n",
+    "fundamental data structure of PyTorch is the \"tensor\").\n",
+    "```"
    ]
   },
   {
@@ -1283,17 +1305,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81959530",
-   "metadata": {},
-   "source": [
-    "```{admonition} Answer\n",
-    ":class: tip dropdown\n",
-    "No, because `data` has a shape `(3, 2)`, so `3 * 2 = 6` elements, while the shape `(3, 3)` would require `3 * 3 = 9` elements\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "57b52eed",
    "metadata": {},
    "source": [
@@ -1842,17 +1853,6 @@
    "source": [
     "```{admonition} Question\n",
     "So what happened when we ran `data[np.arange(1, 3), np.arange(0, 2)]` above?\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e7fd6772",
-   "metadata": {},
-   "source": [
-    "```{admonition} Answer\n",
-    ":class: tip dropdown\n",
-    "This is a simpler example than what we just saw: here the broadcasting doesn't do anything, since the two input arrays have the same shape, equal to `(2,)`. So this just created an array of shape `(2,)`, in which the first element is taken from `data[1, 0]` (= 3), and the second from `data[2, 1]` (= 6).\n",
     "```"
    ]
   },
