--- a/python-school/data_files/1-lines.ipynb
+++ b/python-school/data_files/1-lines.ipynb
@@ -8,7 +8,10 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "In these tutorials we will see how to load and write tabular data such as CSV, and we will mention tree-like data such as JSON files."
+    "In these tutorials we will see how to load and write text files containing data in different formats:\n",
+    "- line-delimited data\n",
+    "- tabular data such as CSV\n",
+    "- tree-like data such as JSON files."
    ]
   },
   {
@@ -87,7 +90,7 @@
     "\n",
     "\n",
     "\n",
-    "### open command\n",
+    "### The `open` function\n",
     "\n",
     "The command\n",
     "\n",
@@ -95,7 +98,7 @@
     "open('data/people-simple.txt', encoding='utf-8')\n",
     "```\n",
     "\n",
-    "allows us to open the text file by telling PYthon the file path `'people-simple.txt'` and the encoding in which it was written (`encoding='utf-8'`). "
+    "allows us to open the text file by telling Python the file path `'people-simple.txt'` and the encoding in which it was written (`encoding='utf-8'`). "
    ]
   },
   {
@@ -104,38 +107,69 @@
    "source": [
     "### The encoding\n",
     "\n",
-    "The encoding dependes on the operating system and on the editor used to write the file. When we open a file, Python is not capable to figure out the encoding, and if we do not specify anything Python might open the file assuming an encoding different from the original - in other words, if we omit the encoding (or we put a wrong one) we might end up seeing weird characters (like little squares instead of accented letters).\n",
+    "The encoding depends on the operating system and on the editor used to write the file. When we open a file, Python is not capable to figure out the encoding, and if we do not specify anything Python might open the file assuming an encoding different from the original. As a result, if we omit the encoding (or we put a wrong one) we might end up seeing weird characters (like little squares instead of accented letters).\n",
     "\n",
-    "In general, when you open a file, try not specifying any encoding, by default Python assumes it's `utf-8` which is the most common one. If it doesn't work try others, for example for files written in south Europe with Windows you might check `encoding='latin-1'`. If you open a file written elsewhere, you might need other encodings. For more in-depth information, you can read [Dive into Python - Chapter 4 - Strings](https://diveintopython3.problemsolving.io/strings.html), and [Dive into Python - Chapter 11 - File](https://diveintopython3.problemsolving.io/files.html), **both of which are extremely recommended readings**."
+    "In general, when you open a file, try not specifying any encoding, by default Python assumes it's `utf-8` which is the most common one. If it doesn't work, you should try others. For example for files written in southern Europe with Windows you might check `encoding='latin-1'`. If you open a file written elsewhere, you might need other encodings. For more in-depth information, you can read [Dive into Python - Chapter 4 - Strings](https://diveintopython3.problemsolving.io/strings.html), and [Dive into Python - Chapter 11 - File](https://diveintopython3.problemsolving.io/files.html)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### with block\n",
+    "### The `with` block\n",
     "\n",
     "The `with` defines a block with instructions inside:\n",
     "\n",
     "```python\n",
     "with open('data/people-simple.txt', encoding='utf-8') as f:\n",
-    "    line=f.readline()\n",
+    "    line = f.readline()\n",
     "    print(line)\n",
     "```\n",
     "\n",
-    "We used the `with` to tell PYthon that in any case, even if errors occur, we want that after having used the file, that is after having executed the instructions inside the internal block (the `line=f.readline()` and `print(line)`) Python must automatically close the file. Properly closing a file avoids to waste memory resources and creating hard to find paranormal errors. If you want to avoid hunting for never closed zombie files, always remember to open all files in `with` blocks! Furthermore, at the end of the row in the part `as f:` we assigned the file to a variable hereby called `f`, but we could have used any other name we liked.\n",
+    "`with` is used to create a *context* in which to execute the indented block of code that follows it.\n",
+    "The context here is simply that a file is open, and can be operated on through the `f` variable.\n",
+    "**Importantly, when you're out of the indented block -- which means that the context \"the file is open\" ends -- the file... gets closed.**\n",
     "\n",
-    "\n",
+    "```{admonition} Question\n",
+    "Then, before running the following cell, try to guess what happens when we try reading another line with `f`.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "raises-exception",
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "f.readline()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Properly closing a file avoids to waste memory resources and creating hard to find paranormal errors. If you want to avoid hunting for never closed zombie files, always remember to open all files in `with` blocks! Furthermore, at the end of the row in the part `as f:` we assigned the file to a variable hereby called `f`, but we could have used any other name we liked."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```{warning}\n",
-    "To indent the code, ALWAYS use sequences of four white spaces. Sequences of 2 spaces. Sequences of only 2 spaces even if allowed are not recommended.\n",
+    "To indent the code, always use sequences of four white spaces. Sequences of only 2 spaces, even if allowed, are not recommended.\n",
     "```\n",
     "\n",
     "```{warning}\n",
-    "Depending on the editor you use, by pressing TAB you might get a sequence o f white spaces like it happens in Jupyter (4 spaces which is the recommended length), or a special tabulation character (to avoid)! As much as this annoying this distinction might appear, remember it because it might generate very hard to find errors.\n",
+    "Depending on the editor you use, by pressing `<Tab>` you might get a sequence o f white spaces like it happens in Jupyter (4 spaces which is the recommended length), or a special tabulation character (to avoid)! As annoying as this distinction might appear, remember it because it might generate very hard to find errors.\n",
     "```\n",
     "\n",
     "```{warning}\n",
-    "In the commands to create blocks such as `with`, always remember to put the character of colon `:` at the end of the line !\n",
+    "In the commands to create blocks such as `with`, always remember to put the character of colon `:` at the end of the line!\n",
     "```"
    ]
   },
@@ -146,14 +180,16 @@
     "id": "en84Abg_5bPb"
    },
    "source": [
+    "### Reading in the file\n",
+    "\n",
     "The command\n",
     "\n",
     "```\n",
-    "    line=f.readline()\n",
+    "    line = f.readline()\n",
     "```\n",
-    "puts in the variable `line` the entire line, like a string. Warning: the string will contain at the end the special character of line return !\n",
+    "puts in the variable `line` the entire first line, like a string. Warning: the string will contain at the end the special character of line return!\n",
     "\n",
-    "You might wonder where that `readline` comes from. Like everything in Python, our variable `f` which represents the file we just opened is an object, and like any object, depending on its type, it has particular methods we can use on it. In this case the method is `readline`. \n",
+    "You might wonder where that `.readline()` comes from. Like everything in Python, our variable `f` which represents the file we just opened is an object, and like any object, depending on its type, it has particular methods we can use on it. In this case the method is `.readline()`. \n",
     "\n",
     "The following command prints the string content:\n",
     "\n",
@@ -179,7 +215,7 @@
     "id": "0zsZD7-N5bPo"
    },
    "source": [
-    "**✪ 1.2 EXERCISE**: you might wondering what exactly is that `f`, and what exactly the method `readlines` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
+    "**✪ 1.2 EXERCISE**: you might be wondering what exactly is that `f`, and what exactly the method `readlines` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
     "\n",
     "* `print(type(f))`\n",
     "* `help(f)`\n",
@@ -190,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -452,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -482,7 +518,7 @@
     "with open(\"data/people-simple.txt\") as f:\n",
     "    name = f.readline()\n",
     "    surname = f.readline()\n",
-    "    print(name + \" \" + surname)"
+    "    print(f\"{name} {surname}\")"
    ]
   },
   {
@@ -497,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -525,7 +561,7 @@
     "with open(\"data/people-simple.txt\") as f:\n",
     "    name = f.readline().rstrip()\n",
     "    surname = f.readline().rstrip()\n",
-    "    print(name + \" \" + surname)"
+    "    print(f\"{name} {surname}\")"
    ]
   },
   {
@@ -535,12 +571,14 @@
     "id": "1XWpXow25bQM"
    },
    "source": [
-    "**✪ 1.3 EXERCISE**: Again, rewrite the block above in the cell below, ed execute the cell with Control+Enter. Question: what happens if you use `strip()` instead of `rstrip()`? What about `lstrip()`? Can you deduce the meaning of `r` and `l`? If you can't manage it, try to use python command `help` by calling `help(string.rstrip)`"
+    "**✪ 1.3 EXERCISE**: Again, rewrite the block above in the cell below, and execute the cell with Control+Enter.\n",
+    "\n",
+    "Question: what happens if you use `strip()` instead of `rstrip()`? What about `lstrip()`? Can you deduce the meaning of `r` and `l`? If you can't manage it, try to use python command `help` by calling `help(string.rstrip)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -564,7 +602,7 @@
     "with open(\"data/people-simple.txt\") as f:\n",
     "    name = f.readline().rstrip()\n",
     "    surname = f.readline().rstrip()\n",
-    "    print(name + \" \" + surname)"
+    "    print(f\"{name} {surname}\")"
    ]
   },
   {
@@ -579,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -611,18 +649,8 @@
     "    while line != \"\":\n",
     "        name = line.rstrip()\n",
     "        surname = f.readline().rstrip()\n",
-    "        print(name + \" \" + surname)\n",
+    "        print(f\"{name} {surname}\")\n",
     "        line = f.readline()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "In Python there are [shorter ways](https://thispointer.com/5-different-ways-to-read-a-file-line-by-line-in-python/) \n",
-    "to read a text file line by line, we used this approach  to make explicit all passages.\n",
-    "```"
    ]
   },
   {
@@ -650,9 +678,19 @@
     "```python\n",
     "while line != \"\":                   # enter cycle if line contains characters\n",
     "    name = line.rstrip()            # parses the name\n",
-    "    surname=f.readline().rstrip()   # reads next line and parses surname\n",
-    "    print(name + ' ' + surname)     \n",
-    "    line=f.readline()               # read next line\n",
+    "    surname = f.readline().rstrip()   # reads next line and parses surname\n",
+    "    print(f\"{name} {surname}\")\n",
+    "    line = f.readline()               # read next line\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "In Python there are [shorter ways](https://thispointer.com/5-different-ways-to-read-a-file-line-by-line-in-python/) \n",
+    "to read a text file line by line, we used this approach to make explicit all passages.\n",
     "```"
    ]
   },
@@ -663,7 +701,11 @@
     "id": "z2RxmnlK5bQu"
    },
    "source": [
-    "**✪ 1.4 EXERCISE**: As before, rewrite in the cell below the code with the `while`, paying attention to the indentation (for the external `with` line use copy-and-paste):"
+    "**✪✪ 1.4 EXERCISE**: We just presented the approach above to make things explicit. However, there are two more idiomatic ways to iterate over lines which involve a `for` loop. Try to rewrite the code above, this time using a `for` loop.\n",
+    "\n",
+    "```{hint}\n",
+    "Start by inspecting all methods of `f` using `dir(f)`, or the cell magic `?f.*`. Can you find the two methods that could help you? Also, experiment with random ideas of how to use the `for` loop, one of them might just work!\n",
+    "```"
    ]
   },
   {
@@ -673,7 +715,7 @@
     "id": "6pP7nWFc5bQ4"
    },
    "source": [
-    "## people-complex line file\n",
+    "## Exercises - `people-complex` line file\n",
     "\n",
     "Look at the file `people-complex.txt`:\n",
     "\n",
@@ -704,118 +746,9 @@
     "id": "c76qOu-25bQ7"
    },
    "source": [
-    "\n",
-    "**Hint 1**: to obtain the string `'abcde'`, the substring  `'cde'`, which starts at index 2, you can use the square brackets operator, using the index followed by colon `:`\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "wbGZhl2w5bQ-",
-    "outputId": "d42be766-a32c-44c6-c44f-b29b34817cd8"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'cde'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = 'abcde'\n",
-    "x[2:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "Nr3E0n-d5bRI",
-    "outputId": "33bdbff3-051a-4c6f-86b0-209fa7706cd3"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'de'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x[3:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "HlDQzVWG5bRS"
-   },
-   "source": [
-    "**Hint 2**: To know the length of a string, use the function `len`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "G5-AXund5bRT",
-    "outputId": "2bc3c444-04d0-4053-d3c0-60fe33ed6099"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len('abcde')"
+    "```{hint}\n",
+    "Each line is clearly split into two parts. Find the method you can use on a line to separate the line into these two parts. Then it'll be easy to extract the part you're interested in.\n",
+    "```"
    ]
   },
   {
@@ -825,7 +758,7 @@
     "id": "KVA0FPut5bRe"
    },
    "source": [
-    "**✪ 1.5 EXERCISE**: Write here the solution of the exercise 'People complex':"
+    "**✪ 1.5 EXERCISE**: Write here the solution of the exercise 'People complex'. Use either a `while` or a `for` loop, whichever you feel more comfortable with."
    ]
   },
   {
@@ -835,7 +768,7 @@
     "id": "Q_F0X5jm5bRo"
    },
    "source": [
-    "## Exercise - line file immersione-in-python-toc\n",
+    "## Exercise -  `immersione-in-python-toc` line file\n",
     "\n",
     "✪✪✪ This exercise is more challenging, if you are a beginner you might skip it and go on to CSVs\n",
     "\n",
@@ -1046,7 +979,7 @@
     "id": "7OBEbHya5bSd"
    },
    "source": [
-    "**HINT 3**: while there is only one sequence to substitute, `replace` is fine, but if we had a million of horrible sequences like `&gt;`, `&#62;`, `&x3e;`, what should we do? As good data cleaners, we recognize these are [HTML escape sequences](https://corsidia.com/materia/web-design/caratterispecialihtml), so we could use  methods specific to sequences like [html.escape](https://docs.python.org/3/library/html.html#html.unescape). TRy it instead of `replace` and check if it works!\n",
+    "**HINT 3**: while there is only one sequence to substitute, `replace` is fine, but if we had a million of horrible sequences like `&gt;`, `&#62;`, `&x3e;`, what should we do? As good data cleaners, we recognize these are [HTML escape sequences](https://corsidia.com/materia/web-design/caratterispecialihtml), so we could use  methods specific to sequences like [html.escape](https://docs.python.org/3/library/html.html#html.unescape). Try it instead of `replace` and check if it works!\n",
     "\n",
     "\n",
     "NOTE: Before using `html.unescape`, import the module `html` with the command: \n",
@@ -1087,7 +1020,7 @@
     {
      "data": {
       "text/plain": [
-       "'bbb'"
+       "'bbbb'"
       ]
      },
      "execution_count": 17,
@@ -1096,40 +1029,7 @@
     }
    ],
    "source": [
-    "\"b\" * 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "output_extras": [
-      {}
-     ]
-    },
-    "colab_type": "code",
-    "id": "NK5lFuks5bSm",
-    "outputId": "56bed93f-878f-4d92-88fc-2afef788218c"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bbbbbbb'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"b\" * 7"
+    "\"b\" * 4"
    ]
   },
   {
@@ -1139,7 +1039,7 @@
     "id": "58yyJFaf5bSu"
    },
    "source": [
-    "**IMPLEMENTATION**: Write here the solution for the line file `immersione-in-python-toc.txt`, and try execute it by pressing Control + Enter:\n"
+    "**IMPLEMENTATION**: Write here the solution for the line file `immersione-in-python-toc.txt`.\n"
    ]
   },
   {
